[gd_scene load_steps=25 format=3 uid="uid://rrunhoekaobs"]

[ext_resource type="Script" uid="uid://c6cuicw2fa6im" path="res://scripts/hud.gd" id="1_4jqwt"]
[ext_resource type="PackedScene" uid="uid://wvc1pqvifplx" path="res://scenes/ui/ui.tscn" id="2_4jqwt"]
[ext_resource type="Texture2D" uid="uid://b0fy2srh8sudr" path="res://assets/ui/green_btn.png" id="2_uo2fv"]
[ext_resource type="Texture2D" uid="uid://c65enwsiy6aq5" path="res://assets/ui/yellow_btn.png" id="3_047uy"]
[ext_resource type="Texture2D" uid="uid://bc2oah3ifqyy4" path="res://assets/items/item041.png" id="5_hd3ao"]
[ext_resource type="Texture2D" uid="uid://bwjnbd10kg3uj" path="res://assets/ui/menu.svg" id="7_gss2c"]
[ext_resource type="Texture2D" uid="uid://b8jwsklc0gpoa" path="res://assets/ui/menu_pressed.png" id="8_h022r"]
[ext_resource type="AudioStream" uid="uid://daxwv6umaanmi" path="res://assets/music/tap.mp3" id="9_4jqwt"]
[ext_resource type="Texture2D" uid="uid://cntrel1hb4hnh" path="res://assets/ui/left.png" id="9_kicr4"]
[ext_resource type="Texture2D" uid="uid://dgl52krsiu4rb" path="res://assets/ui/left_pressed.png" id="10_cwdlq"]
[ext_resource type="Texture2D" uid="uid://kjnx3slc5bnv" path="res://assets/ui/right.png" id="11_o6xly"]
[ext_resource type="Texture2D" uid="uid://clex61cd23vnr" path="res://assets/ui/right_pressed.png" id="12_we3sy"]
[ext_resource type="Texture2D" uid="uid://bgvb77ub7g0do" path="res://assets/ui/up.png" id="13_65nxt"]
[ext_resource type="Texture2D" uid="uid://14m3b8xdaut7" path="res://assets/ui/up_pressed.png" id="14_el1dq"]
[ext_resource type="Texture2D" uid="uid://er3l63o7n6id" path="res://assets/ui/attack.png" id="15_gmc6u"]
[ext_resource type="Texture2D" uid="uid://dt5ealwbkxqae" path="res://assets/ui/attack_pressed.png" id="16_1e6lo"]

[sub_resource type="LabelSettings" id="LabelSettings_h022r"]
font_size = 96

[sub_resource type="LabelSettings" id="LabelSettings_mphia"]
font_size = 64
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.78431374)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_hd3ao"]
font_size = 96
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.78431374)
shadow_offset = Vector2(4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_5pdws"]
font_size = 64
outline_size = 4
outline_color = Color(0.003921569, 0.33333334, 0.6509804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4jqwt"]
bg_color = Color(0.8235294, 0.30980393, 0.03529412, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 4
border_color = Color(0.43137255, 0.18431373, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 10.0
expand_margin_top = 5.0
expand_margin_right = 10.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kicr4"]
bg_color = Color(0.8235294, 0.30980393, 0.03529412, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.43529412, 0.18431373, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 10.0
expand_margin_top = 5.0
expand_margin_right = 10.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mj13f"]
bg_color = Color(0.8235294, 0.30980393, 0.03529412, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 4
border_color = Color(0.49803922, 0.21176471, 0.015686275, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 10.0
expand_margin_top = 5.0
expand_margin_right = 10.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0h1do"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_4jqwt")

[node name="menu_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_4jqwt")

[node name="end_ui" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="end_ui"]
offset_right = 1153.0
offset_bottom = 642.0
color = Color(0.011764706, 0.011764706, 0.011764706, 0.5882353)

[node name="Label" type="Label" parent="end_ui/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.5
offset_top = -48.0
offset_right = 286.5
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
text = "Quest Completed"
label_settings = SubResource("LabelSettings_h022r")

[node name="controller" type="CanvasLayer" parent="."]

[node name="left" type="TouchScreenButton" parent="controller"]
position = Vector2(42.999996, 478.99997)
scale = Vector2(3.5937505, 3.5937505)
texture_normal = ExtResource("9_kicr4")
texture_pressed = ExtResource("10_cwdlq")
action = "ui_left"

[node name="right" type="TouchScreenButton" parent="controller"]
position = Vector2(194.99998, 478.99997)
scale = Vector2(3.5937505, 3.5937505)
texture_normal = ExtResource("11_o6xly")
texture_pressed = ExtResource("12_we3sy")
action = "ui_right"

[node name="jump" type="TouchScreenButton" parent="controller"]
position = Vector2(995, 478.99997)
scale = Vector2(3.5937505, 3.5937505)
texture_normal = ExtResource("13_65nxt")
texture_pressed = ExtResource("14_el1dq")
action = "ui_accept"

[node name="attack" type="TouchScreenButton" parent="controller"]
position = Vector2(810.99994, 430.99997)
scale = Vector2(5, 5)
texture_normal = ExtResource("15_gmc6u")
texture_pressed = ExtResource("16_1e6lo")
action = "attack"

[node name="UI" parent="." instance=ExtResource("2_4jqwt")]

[node name="Container" type="CanvasLayer" parent="."]

[node name="life_bar" type="TextureProgressBar" parent="Container"]
offset_left = 16.0
offset_top = 16.0
offset_right = 80.0
offset_bottom = 48.0
scale = Vector2(3, 1)
value = 100.0
texture_progress = ExtResource("2_uo2fv")

[node name="ColorRect" type="ColorRect" parent="Container/life_bar"]
show_behind_parent = true
layout_mode = 0
offset_top = 3.0
offset_right = 64.0
offset_bottom = 29.0
color = Color(0.08627451, 0.08627451, 0.08627451, 0.5882353)

[node name="shield_bar" type="TextureProgressBar" parent="Container"]
offset_left = 16.0
offset_top = 56.0
offset_right = 80.0
offset_bottom = 89.0
scale = Vector2(2, 0.6)
value = 100.0
texture_progress = ExtResource("3_047uy")

[node name="ColorRect" type="ColorRect" parent="Container/shield_bar"]
show_behind_parent = true
layout_mode = 0
offset_top = 3.0
offset_right = 64.0
offset_bottom = 29.0
color = Color(0.08627451, 0.08627451, 0.08627451, 0.5882353)

[node name="gold_status" type="HBoxContainer" parent="Container"]
offset_left = 1015.0001
offset_top = 27.000002
offset_right = 1079.0001
offset_bottom = 93.0
scale = Vector2(0.6, 0.6)

[node name="coin" type="Sprite2D" parent="Container/gold_status"]
position = Vector2(-38.666504, 35.666702)
scale = Vector2(5, 5)
texture = ExtResource("5_hd3ao")

[node name="count" type="Label" parent="Container/gold_status"]
layout_mode = 2
text = "10"
label_settings = SubResource("LabelSettings_mphia")

[node name="soul_status" type="HBoxContainer" parent="Container"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -74.0
offset_top = 7.999996
offset_right = 202.0
offset_bottom = 106.0
grow_horizontal = 2
scale = Vector2(0.6, 0.6)

[node name="count" type="Label" parent="Container/soul_status"]
layout_mode = 2
text = "10"
label_settings = SubResource("LabelSettings_hd3ao")

[node name="label" type="Label" parent="Container/soul_status"]
layout_mode = 2
text = " Souls"
label_settings = SubResource("LabelSettings_5pdws")

[node name="menu_btn" type="TextureButton" parent="Container"]
offset_left = 1073.0
offset_top = 23.0
offset_right = 1113.0
offset_bottom = 63.0
scale = Vector2(1.5, 1.5)
size_flags_vertical = 4
texture_normal = ExtResource("7_gss2c")
texture_pressed = ExtResource("8_h022r")

[node name="quest_btn" type="Button" parent="Container"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -122.5
offset_right = 91.0
offset_bottom = -85.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_4jqwt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kicr4")
theme_override_styles/hover = SubResource("StyleBoxFlat_mj13f")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0h1do")
text = "Start Quest"

[node name="armor_btn" type="Button" parent="Container"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -122.5
offset_right = 41.0
offset_bottom = -85.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_4jqwt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kicr4")
theme_override_styles/hover = SubResource("StyleBoxFlat_mj13f")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0h1do")
text = "Shop"

[node name="food_btn" type="Button" parent="Container"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -122.5
offset_right = 41.0
offset_bottom = -85.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_4jqwt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kicr4")
theme_override_styles/hover = SubResource("StyleBoxFlat_mj13f")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0h1do")
text = "Shop
"
